# ELK-upgrade

./: .gitignore  README.md  create_virtual_env.sh  dev-requirements.txt  injector.py  pyproject.toml  request-test.py  source-es-reindexing-run.sh  test_pytest.sh
ELK-config/kibana/: Kibana_8.12.2  kibana.yml
ELK-config/logstash/: ingest-socket.conf  ingest.conf  logstash-socket.py
encrypt/: encrypt.py
reindex-script/: Search-reindexing-script.py  Search_Engine.py
tests/: conftest.py  test_elasticsearch.py
tests/test_mapping/: performance_metrics_mapping.json  search_ngram_mapping.json
